list.cppresult.txt
In file included from cur.cpp:13:0:
ruslan/list.cpp: In instantiation of 'void Linkedlist<T>::set(int, T) [with T = std::basic_string<char>]':
cur.cpp:201:1:   required from here
ruslan/list.cpp:137:11: error: return-statement with a value, in function returning 'void' [-fpermissive]
    return _default;
           ^
ruslan/list.cpp: In instantiation of 'void Linkedlist<T>::insert(int, T) [with T = std::basic_string<char>]':
cur.cpp:201:1:   required from here
ruslan/list.cpp:150:11: error: return-statement with a value, in function returning 'void' [-fpermissive]
    return _default;
           ^
./check.sh: line 24: ./a.out: No such file or directory
